Version 2.0.13 release (2014/08/19)
-------------------------------------------


Version 2.0.12 release (2014/08/08)
-------------------------------------------

Enabled login for both, email and username.

Added sorting by date for table sort plugin.

Includes for schoolarrays.php changed to full path.

User from Staff list clickable only with correct permissions.

Fix for submitting forms in Safari.

Fix for adding column in Infobook student_list.

Version 2.0.11 release (2014/07/14)
-------------------------------------------

Fixes for Roll-over script (year_end_action2.php script).

Skill profiles are forwarded after the roll-over (they are still 
visible for the last year).

Tiny fixes for Assessments, import scores from file.

Added admissions chart and print for multiple feeders.

New field for enrolment method called appmethod in the database.


Version 2.0.10 release (2014/07/08)
-------------------------------------------

Update report function for report type field and sorted by type.

Added 'new' and 'transfer' type for the community table type field.

Added 'type' field for reports.

Added buttons in Infobook for Alumni and New students.

Skills separated from comments. Categories are only for reports.

Added confirmation for publishing reports.


Version 2.0.5 release (2014/06/24)
-------------------------------------------

Tiny fixes for Manage Assessments/Import from file.

Improved loading speed for Admin/Fees.

Added PPOD export button for Infobook students.

Uploading file system improved, changed foldername for comments and
reports to 'comment' and 'reports'.

Added button for statements list print.

Statements for report are displayed now in the modal window.

Updated the validation form function.

Tiny fixes for Markbook and Markbook file uploader.

Added temporary element for profile photo to fetchStudent_short.

Classic uses now the Classis API for shared comments photos.


Version 2.0.4 release (2014/05/29)