@@ -1,6 +1,7 @@
 Version 2.0.13 release (2014/08/19)
 -------------------------------------------
 
+Added frame content printer again, this time opens in a modal.
 
 Version 2.0.12 release (2014/08/08)
 -------------------------------------------
